# pyprophet

./: .dockerignore  .gitignore  .readthedocs.yml  .travis.yml  ALIGNMENT_INTEGRATION_WORKFLOW.md  BEFORE_AND_AFTER.md  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  GAIN_SCORER_IMPLEMENTATION.md  HISTGBC_IMPLEMENTATION_SUMMARY.md  HISTGBC_TEST_ADDITIONS.md  IMPLEMENTATION_COMPLETE.md  LICENCSE  PROFILE_HOWTO  PR_144_COMPLETION_SUMMARY.md  README.md  README.rst  compare_classifiers.py  nose.cfg  profile_minimal_algo.py  pyproject.toml  release.sh  reproduce_r.sh  requirements.txt  rewrite_minimal_algo.py  run_for_profile.py  setup.cfg  setup.py
.github/workflows/: build-release.yml  buildpackage.yml  changelog.yml  ci.yml  dependabot.yml  dockerpublish.yml  pythonpublish.yml  singularity-publish.yml  test-build.yml  testbuiltpackage.yml
dist-scripts/: create-manylinux.sh  manylinux.patch
docs/: .readthedocs.yml  README.md  cli.rst  conf.py  file_formats.rst  index.rst
docs/_static/: custom.css
docs/api/: config.rst  index.rst  io.rst  ipf.rst  levels_context.rst  scoring.rst
docs/templates/: class.rst
docs/user_guide/: ALIGNMENT_INTEGRATION_WORKFLOW.md  alignment_integration_workflow.rst  file_conversion.rst  index.rst  pyprophet_workflow.rst
examples/: gain_scorer_demo.py
old_code/: NOTIZEN  lib_mprophet.R  mProphet.R
orig_r_code/: .RData  .Rhistory  NOTIZEN  NOTIZEN.1  lib_mprophet.R  mProphet.R  mProphetFixed.R  massif.out.5707  massif.out.5725  plot.py  run.sh  short.csv  test_reduced.csv  test_semisupervised.py  values.txt
packaging/pyinstaller/: run_pyprophet.py
packaging/pyinstaller-hooks/: hook-xgboost.py
pyprophet/: __init__.py  _base.py  _config.py  _data_structures.py  _optimized.c  _optimized.py  _optimized.pyx  classifiers.py  config.py  config_handler.py  data_handling.py  data_import.py  error_table.py  export.py  export_compound.py  export_parquet.py  export_report.py  fdr_calc.py  filter.py  io.py  ipf.py  levels_contexts.py  main.py  main_helpers.py  misc.py  ms1_scoring.py  null_model.py  optimized.c  optimized.py  optimized.pyx  pyprophet.py  reader.py  report.py  runner.py  scaler.py  semi_supervised.py  split.py  stats.py  std_logger.py  test_fdr.py  (+4 more)
pyprophet/cli/: export.py  ipf.py  ipy.py  levels_context.py  merge.py  score.py  util.py
pyprophet/export/: calibration_report.py  export_compound.py  export_parquet.py  export_report.py
pyprophet/glyco/: export.py  glycoform.py  report.py  scoring.py  stats.py
pyprophet/io/: __init__.py  _base.py  _config.py  dispatcher.py  osw.py  parquet.py  split_parquet.py  tsv.py  util.py
pyprophet/scoring/: __init__.py  _optimized.c  _optimized.pyx  classifiers.py  data_handling.py  optimized.py  pyprophet.py  runner.py  semi_supervised.py
sandbox/: compare.py  compare_classifiers.py  compare_gauss_kernel_density_estimate.py  createFakeOSW.ipynb  export_parquet.py  generate_storey_ref_data.R  lfdr_val.R  ludovic.py  p_values.txt  reproduce_r.sh  test_pyprophet_export_parquet.py  test_qvalue_ref_data.csv  test_statsmodels_kde.py
scripts/: README.md  build_linux.sh  build_macos.sh  build_windows.bat
tests/: .gitignore  Create_OSW_test.ipynb  README.md  test.ipynb  test_apply_classifier.py  test_cmdline_pyprophet.py  test_config_handler.py  test_data_handling.py  test_data_import.py  test_gain_scorer.py  test_io.py  test_io_ipf.py  test_io_levels_contexts.py  test_io_scoring.py  test_ipf.py  test_optimized.py  test_osw_export_score_views.py  test_pyprophet_commandline.py  test_pyprophet_export.py  test_pyprophet_export_parquet.py  test_pyprophet_ipf.py  test_pyprophet_levels_contexts.py  test_pyprophet_score.py  test_stats.py  test_uis_scoring.py  test_version_check.py  test_via_regression.py
tests/_regtest_outputs/: test_apply_classifier.test_apply_classifier.out  test_apply_classifier.test_apply_weights.out  test_pyprophet_commandline.test_0.out  test_pyprophet_commandline.test_1.out  test_pyprophet_commandline.test_2.out  test_pyprophet_commandline.test_3.out  test_pyprophet_commandline.test_apply_classifier.out  test_pyprophet_commandline.test_apply_scorer.out  test_pyprophet_commandline.test_apply_weights.out  test_pyprophet_commandline.test_ipf_0.out  test_pyprophet_commandline.test_ipf_1.out  test_pyprophet_commandline.test_ipf_2.out  test_pyprophet_commandline.test_ipf_3.out  test_pyprophet_commandline.test_ipf_4.out  test_pyprophet_commandline.test_multiple_input_files.out  test_pyprophet_commandline.test_multiple_input_files_with_merge.out  test_pyprophet_commandline.test_osw_0.out  test_pyprophet_commandline.test_osw_1.out  test_pyprophet_commandline.test_osw_2.out  test_pyprophet_commandline.test_out_of_core_apply_weights.out  test_pyprophet_commandline.test_out_of_core_multi_input_files.out  test_pyprophet_commandline.test_tsv_0.out  test_pyprophet_commandline.test_tsv_1.out  test_pyprophet_commandline.test_tsv_2.out  test_pyprophet_commandline.test_tsv_3.out  test_pyprophet_commandline.test_tsv_apply_weights.out  test_pyprophet_export.test_compound_0.out  test_pyprophet_export.test_compound_1.out  test_pyprophet_export.test_compound_ms1.out  test_pyprophet_export.test_compound_ms2.out  test_pyprophet_export.test_compound_unscored.out  test_pyprophet_export.test_feature_scores_ms1_ms2_transition.out  test_pyprophet_export.test_feature_scores_parquet_with_scores.out  test_pyprophet_export.test_feature_scores_scored_osw.out  (+137 more)
(+35 files in other folders)
