[build-system]
requires = ["setuptools", "wheel", "numpy", "cython"]  # Dependencies needed to build the package
build-backend = "setuptools.build_meta"

[project]
name = "pyprophet"
version = "2.3.3"
description = "PyProphet: Semi-supervised learning and scoring of OpenSWATH results."
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "BSD" }
authors = [{ name = "The PyProphet Developers", email = "rocksportrocker@gmail.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry"
]
keywords = ["bioinformatics", "openSWATH", "mass spectrometry"]

# Dependencies required for runtime
dependencies = [
    "Click",
    "duckdb",
    "duckdb-extensions",
    "duckdb-extension-sqlite-scanner",
    "numpy >= 1.26.4",
    "scipy",
    "pandas >= 2.0",
    "polars >= 1.28.1",
    "cython",
    "numexpr >= 2.10.1",
    "scikit-learn >= 1.5",
    "xgboost",
    "hyperopt",
    "statsmodels >= 0.8.0",
    "matplotlib",
    "tabulate",
    "pyarrow",
    "pypdf"
]

# Optional dependencies 
[project.optional-dependencies]
testing = ["pytest", "pytest-regtest"]

# Define console entry points
[project.scripts]
pyprophet = "pyprophet.main:cli"

[tool.setuptools]
packages = { find = { exclude = ["ez_setup", "examples", "tests"] } }
include-package-data = true
zip-safe = false
