[build-system]
requires = ["setuptools", "wheel", "numpy", "cython"]  # Dependencies needed to build the package
build-backend = "setuptools.build_meta"

[project]
name = "pyprophet"
version = "3.0.4"
description = "PyProphet: Semi-supervised learning and scoring of OpenSWATH results."
readme = { file = "README.md", content-type = "text/markdown" }
license = { text = "BSD" }
authors = [{ name = "The PyProphet Developers", email = "rocksportrocker@gmail.com" }]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
    "Topic :: Scientific/Engineering :: Chemistry"
]
keywords = ["bioinformatics", "OpenSWATH", "mass spectrometry"]
requires-python = ">=3.9, <=3.13"

# Dependencies required for runtime
dependencies = [
    "Click",
    "loguru",
    "duckdb",
    "duckdb-extensions",
    "duckdb-extension-sqlite-scanner",
    "numpy >= 1.26.4",
    "scipy",
    "pandas >= 2.0",
    "polars >= 1.28.1",
    "cython",
    "scikit-learn >= 1.5",
    "xgboost-cpu >= 2.1.4", # regular xgboost includes nvidia libraries which bloat the package size on linux. For PyProphet, we likely would not need GPU support.
    "matplotlib",
    "pypdf",
    "psutil",
    "pyopenms",
    "lxml",
    "packaging"
]

# Optional dependencies 
[project.optional-dependencies]
testing = ["pytest", "pytest-regtest", "pytest-xdist"]
docs = ["sphinx", "sphinx-copybutton", "sphinx_rtd_theme", "pydata_sphinx_theme", "sphinx-click"]
dev = ["pyprophet[testing]", "pyprophet[docs]", "black", "ruff", "mypy"]
parquet = ["pyarrow"]

# Define console entry points
[project.scripts]
pyprophet = "pyprophet.main:cli"

[tool.setuptools]
packages = { find = { where = ["."], exclude = ["tests*", "docs*", "examples*", "scripts*", "packaging*"] } }
include-package-data = true
zip-safe = false

[tool.setuptools.package-data]
pyprophet = ["py.typed", "**/*.pyx", "**/*.pxd"]
